Refining Exp10 in light of recent changes. Semms to work fine.

--- a/Exp10.ipynb
+++ b/Exp10.ipynb
@@ -45,13 +45,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 3,
        "text": [
         "0.054156488522175208"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -126,7 +126,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 39
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -148,7 +148,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 888\tactions changed."
        ]
       },
       {
@@ -156,7 +156,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 578\tactions changed."
+        "Iteration 1, 800\tactions changed."
        ]
       },
       {
@@ -164,7 +164,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 730\tactions changed."
+        "Iteration 2, 234\tactions changed."
        ]
       },
       {
@@ -172,7 +172,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 360\tactions changed."
+        "Iteration 3, 50\tactions changed."
        ]
       },
       {
@@ -180,31 +180,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 190\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 22\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 2\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 4, 0\tactions changed."
        ]
       },
       {
@@ -215,30 +191,36 @@
        ]
       }
      ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rho = lambda : int(rand()*729) #uniform distribtion over S\n",
-      "D_E = Highway.D_func(Pi_E, 1, 100,  rho)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "rho = lambda : int(rand()*729) #uniform distribtion over S\n",
+      "l_D_E = [array(Highway.D_func(Pi_E, 1, 3,  rho)) for i in range(0,3)]\n",
+      "D_E = vstack(l_D_E)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "Mu_E = zeros((3645,1))\n",
-      "for i in range(0,100):\n",
-      "    s = D_E[i][0]\n",
-      "    a = D_E[i][1]\n",
-      "    Mu_E[s + a*729] += pow(Gamma,i)\n",
-      "Mu_E /= 100.\n",
+      "l_mu_E = []\n",
+      "for episode in l_D_E:\n",
+      "    mu = zeros((3645,1))\n",
+      "    for i in range(0,len(episode)):\n",
+      "        s = episode[i][0]\n",
+      "        a = episode[i][1]\n",
+      "        mu[s + a*729] += pow(Gamma,i)\n",
+      "    mu /= float(len(episode))\n",
+      "    l_mu_E.append(mu)\n",
+      "Mu_E = mean(l_mu_E,axis=0)\n",
       "Mu_E.shape"
      ],
      "language": "python",
@@ -246,13 +228,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 12,
        "text": [
         "(3645, 1)"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -275,7 +257,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -291,22 +273,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Norme du gradient : 0.150566033387, pas : 0.5, iteration : 1\n",
-        "Norme du gradient : 1.39369991395, pas : 0.333333333333, iteration : 2\n",
-        "Norme du gradient : 1.4585096489, pas : 0.25, iteration : 3\n",
-        "Norme du gradient : 1.39897420672, pas : 0.2, iteration : 4\n",
-        "Norme du gradient : 1.45041541029, pas : 0.166666666667, iteration : 5\n",
-        "Norme du gradient : 1.43812433149, pas : 0.142857142857, iteration : 6\n",
-        "Norme du gradient : 1.41615622178, pas : 0.125, iteration : 7\n",
-        "Norme du gradient : 1.43997017933, pas : 0.111111111111, iteration : 8\n",
-        "Norme du gradient : 1.41634980953, pas : 0.1, iteration : 9\n",
-        "Norme du gradient : 1.39997205794, pas : 0.0909090909091, iteration : 10\n",
-        "Norme du gradient : 1.45572519117, pas : 0.0833333333333, iteration : 11\n",
-        "Norme du gradient : 1.4248348251, pas : 0.0769230769231, iteration : 12\n",
-        "Norme du gradient : 1.43010025519, pas : 0.0714285714286, iteration : 13\n",
-        "Norme du gradient : 1.41052102246, pas : 0.0666666666667, iteration : 14\n",
-        "Norme du gradient : 1.43689222929, pas : 0.0625, iteration : 15\n",
-        "Norme du gradient : 1.42200260603, pas : 0.0588235294118, iteration : 16"
+        "Norme du gradient : 0.327767989522, pas : 0.5, iteration : 1\n",
+        "Norme du gradient : 1.40009407776, pas : 0.333333333333, iteration : 2\n",
+        "Norme du gradient : 1.46584015817, pas : 0.25, iteration : 3\n",
+        "Norme du gradient : 1.44306880582, pas : 0.2, iteration : 4\n",
+        "Norme du gradient : 1.42355670231, pas : 0.166666666667, iteration : 5\n",
+        "Norme du gradient : 1.46112558275, pas : 0.142857142857, iteration : 6\n",
+        "Norme du gradient : 1.40498159006, pas : 0.125, iteration : 7\n",
+        "Norme du gradient : 1.40008951036, pas : 0.111111111111, iteration : 8"
        ]
       },
       {
@@ -314,24 +288,12 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 1.42930157459, pas : 0.0555555555556, iteration : 17\n",
-        "Norme du gradient : 1.42552230774, pas : 0.0526315789474, iteration : 18\n",
-        "Norme du gradient : 1.43182124117, pas : 0.05, iteration : 19\n",
-        "Norme du gradient : 1.41628842129, pas : 0.047619047619, iteration : 20\n",
-        "Norme du gradient : 1.43921902171, pas : 0.0454545454545, iteration : 21\n",
-        "Norme du gradient : 1.42231680823, pas : 0.0434782608696, iteration : 22\n",
-        "Norme du gradient : 1.4356182074, pas : 0.0416666666667, iteration : 23\n",
-        "Norme du gradient : 1.42201455242, pas : 0.04, iteration : 24\n",
-        "Norme du gradient : 1.4345519148, pas : 0.0384615384615, iteration : 25\n",
-        "Norme du gradient : 1.41495721196, pas : 0.037037037037, iteration : 26\n",
-        "Norme du gradient : 1.44287188486, pas : 0.0357142857143, iteration : 27\n",
-        "Norme du gradient : 1.41832944044, pas : 0.0344827586207, iteration : 28\n",
-        "Norme du gradient : 1.43782116139, pas : 0.0333333333333, iteration : 29\n",
-        "Norme du gradient : 1.417658883, pas : 0.0322580645161, iteration : 30\n",
-        "Norme du gradient : 1.43881323644, pas : 0.03125, iteration : 31\n",
-        "Norme du gradient : 1.4209746717, pas : 0.030303030303, iteration : 32\n",
-        "Norme du gradient : 1.43645835567, pas : 0.0294117647059, iteration : 33\n",
-        "Norme du gradient : 1.41316570444, pas : 0.0285714285714, iteration : 34"
+        "Norme du gradient : 1.46554697614, pas : 0.1, iteration : 9\n",
+        "Norme du gradient : 1.42545637394, pas : 0.0909090909091, iteration : 10\n",
+        "Norme du gradient : 1.44114103954, pas : 0.0833333333333, iteration : 11\n",
+        "Norme du gradient : 1.42030892493, pas : 0.0769230769231, iteration : 12\n",
+        "Norme du gradient : 1.44620540226, pas : 0.0714285714286, iteration : 13\n",
+        "Norme du gradient : 1.40232700595, pas : 0.0666666666667, iteration : 14"
        ]
       },
       {
@@ -339,27 +301,82 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Norme du gradient : 1.44462528046, pas : 0.0277777777778, iteration : 35\n",
-        "Norme du gradient : 1.41609369877, pas : 0.027027027027, iteration : 36\n",
-        "Norme du gradient : 1.43866115422, pas : 0.0263157894737, iteration : 37\n",
-        "Norme du gradient : 1.41095516688, pas : 0.025641025641, iteration : 38\n",
-        "Norme du gradient : 1.44678391577, pas : 0.025, iteration : 39\n",
-        "Norme du gradient : 1.40058671449, pas : 0.0243902439024, iteration : 40\n",
-        "Norme du gradient : 1.45682293434, pas : 0.0238095238095, iteration : 41\n",
-        "Norme du gradient : 1.40284278694, pas : 0.0232558139535, iteration : 42\n",
-        "Norme du gradient : 1.4529435771, pas : 0.0227272727273, iteration : 43\n",
-        "Norme du gradient : 1.40613480799, pas : 0.0222222222222, iteration : 44\n",
-        "Norme du gradient : 1.45264611518, pas : 0.0217391304348, iteration : 45\n",
-        "Norme du gradient : 1.40487491526, pas : 0.0212765957447, iteration : 46\n",
-        "Norme du gradient : 1.45137265074, pas : 0.0208333333333, iteration : 47\n",
-        "Norme du gradient : 1.4085364903, pas : 0.0204081632653, iteration : 48\n",
-        "Norme du gradient : 1.44887205458, pas : 0.02, iteration : 49\n",
-        "Norme du gradient : 1.40068752989, pas : 0.0196078431373, iteration : 50\n",
-        "Gradient de norme : 1.40068752989, a l'iteration : 50\n"
+        "Norme du gradient : 1.46363945244, pas : 0.0625, iteration : 15\n",
+        "Norme du gradient : 1.4131996038, pas : 0.0588235294118, iteration : 16\n",
+        "Norme du gradient : 1.45274036508, pas : 0.0555555555556, iteration : 17\n",
+        "Norme du gradient : 1.43143434358, pas : 0.0526315789474, iteration : 18\n",
+        "Norme du gradient : 1.43221530492, pas : 0.05, iteration : 19\n",
+        "Norme du gradient : 1.40824450806, pas : 0.047619047619, iteration : 20\n",
+        "Norme du gradient : 1.45679758458, pas : 0.0454545454545, iteration : 21"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.40499050593, pas : 0.0434782608696, iteration : 22\n",
+        "Norme du gradient : 1.46106543436, pas : 0.0416666666667, iteration : 23\n",
+        "Norme du gradient : 1.42146569196, pas : 0.04, iteration : 24\n",
+        "Norme du gradient : 1.44503881143, pas : 0.0384615384615, iteration : 25\n",
+        "Norme du gradient : 1.41381259048, pas : 0.037037037037, iteration : 26\n",
+        "Norme du gradient : 1.45252335814, pas : 0.0357142857143, iteration : 27\n",
+        "Norme du gradient : 1.41338347957, pas : 0.0344827586207, iteration : 28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.45293768491, pas : 0.0333333333333, iteration : 29\n",
+        "Norme du gradient : 1.40871868428, pas : 0.0322580645161, iteration : 30\n",
+        "Norme du gradient : 1.45745813851, pas : 0.03125, iteration : 31\n",
+        "Norme du gradient : 1.41570621926, pas : 0.030303030303, iteration : 32\n",
+        "Norme du gradient : 1.45066926838, pas : 0.0294117647059, iteration : 33\n",
+        "Norme du gradient : 1.40943620028, pas : 0.0285714285714, iteration : 34\n",
+        "Norme du gradient : 1.45675890597, pas : 0.0277777777778, iteration : 35"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.40022816019, pas : 0.027027027027, iteration : 36\n",
+        "Norme du gradient : 1.46535604783, pas : 0.0263157894737, iteration : 37\n",
+        "Norme du gradient : 1.41324639394, pas : 0.025641025641, iteration : 38\n",
+        "Norme du gradient : 1.45305803249, pas : 0.025, iteration : 39\n",
+        "Norme du gradient : 1.41286541461, pas : 0.0243902439024, iteration : 40\n",
+        "Norme du gradient : 1.45342640995, pas : 0.0238095238095, iteration : 41\n",
+        "Norme du gradient : 1.40498120245, pas : 0.0232558139535, iteration : 42\n",
+        "Norme du gradient : 1.46104675539, pas : 0.0227272727273, iteration : 43"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.40480627223, pas : 0.0222222222222, iteration : 44\n",
+        "Norme du gradient : 1.46121302863, pas : 0.0217391304348, iteration : 45\n",
+        "Norme du gradient : 1.40492092723, pas : 0.0212765957447, iteration : 46\n",
+        "Norme du gradient : 1.461100941, pas : 0.0208333333333, iteration : 47\n",
+        "Norme du gradient : 1.41259336668, pas : 0.0204081632653, iteration : 48\n",
+        "Norme du gradient : 1.45368294336, pas : 0.02, iteration : 49\n",
+        "Norme du gradient : 1.40453766704, pas : 0.0196078431373, iteration : 50"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Gradient de norme : 1.40453766704, a l'iteration : 50\n"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -368,8 +385,7 @@
       "reward_RE.shape\n",
       "Highway2 = MDP(P,reward_RE)\n",
       "mPi_A, V_A, Pi_A = Highway2.optimal_policy()\n",
-      "true_V_A = linalg.solve( identity( 729 ) - 0.9*dot(mPi_A,P), dot( mPi_A, R) )\n",
-      "mean(true_V_A),mean(V_E)"
+      "Highway.evaluate(mPi_A)"
      ],
      "language": "python",
      "metadata": {},
@@ -384,7 +400,7 @@
         "Card of S 729\n",
         "Card of A 5\n",
         "Card of SA 3645\n",
-        "Iteration 0, 729\tactions changed."
+        "Iteration 0, 1156\tactions changed."
        ]
       },
       {
@@ -392,7 +408,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 1002\tactions changed."
+        "Iteration 1, 922\tactions changed."
        ]
       },
       {
@@ -400,7 +416,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 718\tactions changed."
+        "Iteration 2, 680\tactions changed."
        ]
       },
       {
@@ -408,7 +424,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 342\tactions changed."
+        "Iteration 3, 348\tactions changed."
        ]
       },
       {
@@ -416,7 +432,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 148\tactions changed."
+        "Iteration 4, 136\tactions changed."
        ]
       },
       {
@@ -424,7 +440,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 42\tactions changed."
+        "Iteration 5, 52\tactions changed."
        ]
       },
       {
@@ -432,7 +448,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 12\tactions changed."
+        "Iteration 6, 16\tactions changed."
        ]
       },
       {
@@ -440,15 +456,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Iteration 0, 2\tactions changed."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "Iteration 0, 0\tactions changed."
+        "Iteration 7, 0\tactions changed."
        ]
       },
       {
@@ -457,9 +465,16 @@
        "text": [
         "\n"
        ]
+      },
+      {
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "3.4241361609617362"
+       ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
