--- a/piot2012cascading/ECML13_cascading.tex
+++ b/piot2012cascading/ECML13_cascading.tex
@@ -61,13 +61,13 @@ Not needing to repeatedly solve a Markov Decision Process (MDP) and the ability 
 \label{sec-2}
 Sequential decision making consists in choosing the appropriate action given the available data in order to maximize a certain criterion. When framed in a Markov Decision Process (MDP) (see Sec.~\ref{sec:background}), (Approximate) Dynamic programming ((A)DP) or Reinforcement Learning (RL) are often used to solve the problem by maximizing the expected sum of discounted rewards. The Inverse Reinforcement Learning (IRL)~\cite{russell1998learning} problem, which is addressed here, aims at inferring a reward function for which a demonstrated expert policy is optimal.
 
-IRL is one of many ways to perform Apprenticeship Learning (AL): imitating a demonstrated expert policy, without explicitely looking for the reward function. The reward function nevertheless is of interest in its own right. As mentionned in \cite{russell1998learning}, its semantics can be analyzed in biology or econometrics for instance. Practically, the reward can be seen as a succinct description of a task. Discovering it removes the coupling that exists in AL between understanding the task and learning how to fulfill it. IRL allows the use of (A)DP or RL techniques to learn the task from the computed reward function. Although some approaches use it as a byproduct, most AL algorithm makes no use of the reward function, or have nothing to do with IRL altogether. A very straightforward non-IRL way to do AL is for example to use a multi-class classifier to directly learn the expert policy. We provide in the experiments (Sec.~\ref{sec:experiments}) a comparison between AL and IRL algorithms by using IRL as a way to do AL.
+IRL is one of many ways to perform Apprenticeship Learning (AL): imitating a demonstrated expert policy, without necessarily explicitely looking for the reward function. The reward function nevertheless is of interest in its own right. As mentionned in \cite{russell1998learning}, its semantics can be analyzed in biology or econometrics for instance. Practically, the reward can be seen as a succinct description of a task. Discovering it removes the coupling that exists in AL between understanding the task and learning how to fulfill it. IRL allows the use of (A)DP or RL techniques to learn the task from the computed reward function. Although some approaches use it as a byproduct, most AL algorithm makes no use of the reward function, or have nothing to do with IRL altogether. A very straightforward non-IRL way to do AL is for example to use a multi-class classifier to directly learn the expert policy. We provide in the experiments (Sec.~\ref{sec:experiments}) a comparison between AL and IRL algorithms by using IRL as a way to do AL.
 
 A lot of existing approaches in either IRL or IRL-based AL need to repeatedly solve the underlying MDP to find the optimal policies of intermediate reward functions. Thus, their performance depends strongly on the quality of the associated subroutine. Consequently, they suffer from the same challenges of scalability, data scarcity, etc., as RL and (A)DP. In order to avoid \emph{repeatedly} solving such problems, we adopt a different point of view.
 
 Having in mind that there is a one to one relation between a reward function and its associated optimal action-value function (via the Bellman equation, see Eq.~\eqref{eq:bellman1}), it is worth thinking of a method able to output an action-value function for which the greedy policy is the demonstrated expert policy. Thus, the demonstrated expert policy will be optimal for the corresponding reward function. We propose to use a score function-based multi-class classification step (see Sec.~\ref{sec:algo}) to infer a score function. Besides, in order to retrieve via the Bellman equation the reward associated with the score function computed by the classification step, we introduce a regression step (see Sec.~\ref{sec:algo}). That is why the method is called the Cascaded Supervised Inverse reinforcement learning (CSI). This method is analyzed in Sec.~\ref{sec:analysis}, where it is shown that the demonstrated expert policy is near-optimal for the reward the regression step outputs.
 
-This algorithm does not need to iteratively solve an MDP and needs only sampled transitions from expert and non-expert policies as inputs. Moreover, up to the use of some heuristics (see Sec.~\ref{subsubsec:heuristics}), the algorithm is able to be trained only with transitions sampled from the demonstrated expert policy. A specific instantiation of CSI (proposed Sec.~\ref{subsubsec:subroutines}) is tested on the mountain car problem (Sec.~\ref{subsec:mountaincar}) and a highway driving simulator (Sec.~\ref{subsec:highway}) where we compare it with a pure classification algorithm \cite{taskar2005learning} and with two recent successfull IRL methods \cite{klein2012scirl} as well as with a random baseline.
+This algorithm does not need to iteratively solve an MDP and requires only sampled transitions from expert and non-expert policies as inputs. Moreover, up to the use of some heuristics (see Sec.~\ref{subsubsec:heuristics}), the algorithm is able to be trained only with transitions sampled from the demonstrated expert policy. A specific instantiation of CSI (proposed Sec.~\ref{subsubsec:subroutines}) is tested on the mountain car problem (Sec.~\ref{subsec:mountaincar}) and on a highway driving simulator (Sec.~\ref{subsec:highway}) where we compare it with a pure classification algorithm \cite{taskar2005learning} and with two recent successfull IRL methods \cite{klein2012scirl} as well as with a random baseline.
 
 Differences and similarities with existing AL or IRL approaches are succinctly discussed in Sec.~\ref{sec:related}.
 \section{Background and notations}
@@ -77,7 +77,7 @@ Let $E$ and $F$ be two non-empty sets, $E^F$ is the set of functions from $F$ to
 We note $\Delta_X$ the set of distributions over $X$.
 Let $\alpha\in\mathbb{R}^X$ and $\beta\in\mathbb{R}^X$: $\alpha\geq\beta \Leftrightarrow \forall x\in X, \alpha(x) \geq \beta(x)$. We will often slightly abuse the notations and consider (where applicable) most objects as if they were matrices and vectors indexed by the set they operate upon.
 
-We work with finite MDPs \cite{puterman1994markov}, that is tuples $\{S,A,P,R,\gamma\}$. The state space is noted $S$, $A$ is a finite action space, $R\in\mathbb{R}^{S\times A}$ is a reward-function, $\gamma\in (0,1)$ is a discount factor and $P\in \Delta_{S}^{S\times A}$ is the Markovian dynamics of the MDP. Thus, for each $(s,a)\in S\times A$, $P(.|s,a)$ is a distribution over $S$ and $P(s'|s,a)$ is the probability to reach $s'$ by choosing action $a$ in state $s$. At each time step $t$, the agent uses the information encoded in the state $s_t\in S$ in order to choose an action $a_t \in A$ according to a (deterministic\footnote{We restrict ourselves here to deterministic policies, but the loss of generality is minimal as there exists at least one optimal deterministic policy.}) policy $\pi\in A^S$. The agent then steps to a new state $s_{t+1}\in S$ according to the Markovian transition probabilities $P(s_{t+1}|s_t,a_t)$. Given that $P_\pi$ is $(P(s'|s,\pi(s)))_{s,s' \in S}$ the irreductible transition probability matrix, the stationary distribution over the states $\rho_\pi$ induced by a policy $\pi$ satisfies
+We work with finite MDPs \cite{puterman1994markov}, that is tuples $\{S,A,P,R,\gamma\}$. The state space is noted $S$, $A$ is a finite action space, $R\in\mathbb{R}^{S\times A}$ is a reward-function, $\gamma\in (0,1)$ is a discount factor and $P\in \Delta_{S}^{S\times A}$ is the Markovian dynamics of the MDP. Thus, for each $(s,a)\in S\times A$, $P(.|s,a)$ is a distribution over $S$ and $P(s'|s,a)$ is the probability to reach $s'$ by choosing action $a$ in state $s$. At each time step $t$, the agent uses the information encoded in the state $s_t\in S$ in order to choose an action $a_t \in A$ according to a (deterministic\footnote{We restrict ourselves here to deterministic policies, but the loss of generality is minimal as there exists at least one optimal deterministic policy.}) policy $\pi\in A^S$. The agent then steps to a new state $s_{t+1}\in S$ according to the Markovian transition probabilities $P(s_{t+1}|s_t,a_t)$. Given that $P_\pi = (P(s'|s,\pi(s)))_{s,s' \in S}$ is the irreductible transition probability matrix, the stationary distribution over the states $\rho_\pi$ induced by a policy $\pi$ satisfies
 \begin{equation}
   \rho_\pi^TP_\pi = \rho_\pi^T\textrm{, with }X^T\textrm{ being the transpose of }X.
   \end{equation}
@@ -85,7 +85,7 @@ The stationary distribution relative to the exert policy $\pi_E$ is $\rho_E$.
 
 The reward function $R$ is a local measure of the quality of the control. The global quality of the control induced by a policy $\pi$, with respect to a reward $R$, is assessed by the value function $V^\pi_R \in \mathbb{R}^{S}$ which associates to each state the expected discounted cumulative reward for following policy $\pi$ from this state:
 \begin{equation}
-V^\pi_R(s) = \E[\sum_{t\geq 0}\gamma^tR(s_t,\pi(s_t))|s_0 = s].
+V^\pi_R(s) = \E[\sum_{t\geq 0}\gamma^tR(s_t,\pi(s_t))|s_0 = s,\pi].
 \end{equation}
 This long-term criterion is what is being optimized when solving an MDP. Therefore, an optimal policy $\pi^*_R$ is a policy whose value function (the optimal value function $V^*_R$) is greater than that of any other policy, for all states: $\forall \pi, V^*_R\geq V^\pi_R$.
 
@@ -93,7 +93,7 @@ The Bellman evaluation operator $T^\pi_R: \mathbb{R}^{S} \rightarrow  \mathbb{R}
 \begin{equation}
   T^{\pi}_RV = R_\pi + \gamma P_\pi V
   \end{equation}
-where $R_\pi$ is $(R(s,\pi(s)))_{s\in S}$. The Bellman optimality operator follows naturally:
+where $R_\pi = (R(s,\pi(s)))_{s\in S}$. The Bellman optimality operator follows naturally:
 \begin{equation}
   T^*_RV = \max_\pi T^\pi_RV.
 \end{equation}
@@ -117,7 +117,7 @@ An optimal policy follows a greedy mechanism with respect to its optimal action-
 
 When the state space is too large to allow matrix representations or when the transition probabilites or even the reward function are unknown except through observations gained by interacting with the system, RL or ADP may be used to approximate the optimal control policy~\cite{sutton1998reinforcement}.
 
-We recall that solving the MDP is the direct problem. This contribution aims at solving the inverse one. We observe trajectories drawn from an expert's deterministic\footnotemark[\value{footnote}] policy $\pi_E$, assuming that there exists some unknown reward $R_E$ for which the expert is optimal. The suboptimality of the expert is an interesting setting that has been discussed for example in \cite{melo2010analysis,syed2010reduction}, but that we are not addressing here. We do not try to find this unknown reward $R_E$ but rather a non trivial reward $R$ for which the expert is at least near-optimal. The trivial reward $0$ is a solution to this ill-posed problem (no reward means that every behavior is optimal). Because of its ill-posed nature, this expression of \emph{Inverse Reinforcement Learning} (IRL) still has to find a satisfactory solution although a lot of progress have been made, see Sec.~\ref{sec:related}.
+We recall that solving the MDP is the direct problem. This contribution aims at solving the inverse one. We observe trajectories drawn from an expert's deterministic\footnotemark[\value{footnote}] policy $\pi_E$, assuming that there exists some unknown reward $R_E$ for which the expert is optimal. The suboptimality of the expert is an interesting setting that has been discussed for example in \cite{melo2010analysis,syed2010reduction}, but that we are not addressing here. We do not try to find this unknown reward $R_E$ but rather a non trivial reward $R$ for which the expert is at least near-optimal. The trivial reward $0$ is a solution to this ill-posed problem (no reward means that every behavior is optimal). Because of its ill-posed nature, this expression of \emph{Inverse Reinforcement Learning} (IRL) still has to find a satisfactory solution although a lot of progress has been made, see Sec.~\ref{sec:related}.
 \section{The cascading algorithm}
 \label{sec:algo}
 Our first step towards a reward function solving the IRL problem is a classification step using a \emph{score function-based multi-class classifier} (SFMC$^2$ for short). This classifier learns a score function $q\in\mathbb{R}^{S\times A}$ that rates the association of a given action\footnote{Here, actions play the role of what is known as {\it labels} or {\it categories} when talking about classifiers.} $a\in A$ with a certain input $s\in S$. The classification rule $\pi_C\in A^S$ simply selects (one of) the action(s) that achieves the highest score for the given inputs:
